0x01-variables_if_else_while/0-positive_or_negative.c:

sitive_or_negative.c:23: note: ‘-Wmisleading-indentation’ is disabled from this point onwards, since column-tracking was disabled due to the size of the code/headers
   23 | }
      | 
0-positive_or_negative.c:23:1: error: expected declaration or statement at end of input
   23 | }
      | ^
0-positive_or_negative.c:23: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | 
sitive_or_negative.c:23: note: ‘-Wmisleading-indentation’ is disabled from this point onwards, since column-tracking was disabled due to the size of the code/headers
   23 | }
      | 
0-positive_or_negative.c:23:1: error: expected declaration or statement at end of input
   23 | }
      | ^
0-positive_or_negative.c:23: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | 
sitive_or_negative.c:17:1: error: implicit declaration of function ‘printf’ [-Werror=implicit-function-declaration]
   17 | printf("%d is positive\n", n);
      | ^~~~~~
0-positive_or_negative.c:17:1: error: incompatible implicit declaration of built-in function ‘printf’ [-Werror]
0-positive_or_negative.c:3:1: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
    2 | #include <time.h>
  +++ |+#include <stdio.h>
    3 | 
0-positive_or_negative.c:21:1: error: incompatible implicit declaration of built-in function ‘printf’ [-Werror]
   21 | printf("%d is zero\n", n);
      | ^~~~~~
0-positive_or_negative.c:21:1: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
0-positive_or_negative.c:25:1: error: incompatible implicit declaration of built-in function ‘printf’ [-Werror]
   25 | printf("%d is negative\n", n);
      | ^~~~~~
0-positive_or_negative.c:25:1: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
cc1: all warnings bei...
cc1: all warnings being treated as errors
cc1: all warnings being treated as errorsi
